[gd_scene load_steps=21 format=2]

[ext_resource path="res://Interface/IntroCutscene/IntroCutscene.gd" type="Script" id=1]
[ext_resource path="res://Interface/IntroCutscene/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/IntroCutscene/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Interface/IntroCutscene/desks_n_chairs.png" type="Texture" id=4]
[ext_resource path="res://Interface/IntroCutscene/player_intro_spr.png" type="Texture" id=5]
[ext_resource path="res://ProceduralGeneration/Office/Furniture/water_cooler.png" type="Texture" id=6]
[ext_resource path="res://Interface/IntroCutscene/boss_voice_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Interface/IntroCutscene/boss_voice_2.wav" type="AudioStream" id=8]
[ext_resource path="res://Interface/IntroCutscene/leaderboard.png" type="Texture" id=9]
[ext_resource path="res://Interface/IntroCutscene/Leaderboard.gd" type="Script" id=10]
[ext_resource path="res://Interface/IntroCutscene/desk_n_chair.png" type="Texture" id=11]
[ext_resource path="res://Interface/IntroCutscene/just_chair.png" type="Texture" id=12]
[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=13]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 300, 140 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 7 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JoeSchmuck:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 56, -67 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("JoeSchmuck:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("JoeSchmuck:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("JoeSchmuck:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chair:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "leaderboard"
length = 7.0
step = 0.25
tracks/0/type = "method"
tracks/0/path = NodePath("UILayer/Leaderboard")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7, 1.8, 1.9, 2, 2.1, 2.15, 2.25, 2.3, 2.4, 2.45, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.75, 4.25, 4.75, 5.25, 5.75, 6.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( 0, 0 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 0 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 0 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 0 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 1 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 1 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 1 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 1 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 2 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 1, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 2, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 4 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 4 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 3 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 0, 4 ) ],
"method": "change_frame"
}, {
"args": [ Vector2( 3, 3 ) ],
"method": "change_frame"
} ]
}

[sub_resource type="Animation" id=5]
length = 4.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("UILayer/Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JoeSchmuck:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6, 2.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, -67 ), Vector2( 54, -29 ), Vector2( 30, -16 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("JoeSchmuck:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("JoeSchmuck:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.35, 0.45, 0.7, 0.8, 0.9, 1.15, 1.25, 1.5, 1.6, 1.7, 1.95, 2.05, 2.3, 2.4, 2.5, 2.7, 2.85, 2.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 8, 9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("JoeSchmuck:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.2, 3.3, 3.45, 3.65, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -3, -3 ), Vector2( -7, -6 ), Vector2( -11, -2 ), Vector2( -13, -2 ), Vector2( -16, -2 ), Vector2( -17, -2 ), Vector2( -19, -2 ), Vector2( -20, -2 ), Vector2( -21, -2 ), Vector2( -22, -2 ), Vector2( -23, -2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Chair:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Chair:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.05, 3.1, 3.2, 3.3, 3.45, 3.65, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( -3, 0 ), Vector2( -4, 0 ), Vector2( -5, 0 ), Vector2( -6, 0 ), Vector2( -7, 0 ), Vector2( -8, 0 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="BottomTiles" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -524302, 1, 0, -524301, 1, 0, -524300, 1, 0, -524299, 1, 0, -524298, 1, 0, -524297, 1, 0, -524296, 1, 0, -524295, 1, 0, -524294, 1, 0, -524293, 1, 0, -524292, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 0, 0, -589816, 0, 0, -589815, 12, 0, -589814, 13, 0, -589813, 536870924, 0, -589812, 536870912, 0, -589811, 536870912, 0, -458766, 536870912, 0, -458765, 536870912, 0, -458764, 0, 0, -458763, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 12, 0, -524278, 13, 0, -524277, 536870924, 0, -524276, 536870912, 0, -524275, 536870912, 0, -393231, 21, 0, -393230, 536870929, 0, -393229, 536870912, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 12, 0, -458742, 13, 0, -458741, 536870924, 0, -458740, 536870912, 0, -458739, 536870912, 0, -327694, 536870912, 0, -327693, 536870912, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 18, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 12, 0, -393206, 13, 0, -393205, 536870924, 0, -393204, 536870912, 0, -393203, 536870912, 0, -262149, 2, 0, -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 19, 0, -327676, 1, 0, -327675, 1, 0, -327674, 536870914, 0, -327673, 0, 0, -327672, 0, 0, -327671, 12, 0, -327670, 13, 0, -327669, 536870924, 0, -327668, 536870912, 0, -327667, 536870912, 0, -196613, 536870926, 0, -196612, 536870926, 0, -196611, 536870926, 0, -196610, 536870926, 0, -196609, 536870926, 0, -262144, 536870926, 0, -262143, 536870926, 0, -262142, 536870926, 0, -262141, 536870926, 0, -262140, 536870926, 0, -262139, 536870926, 0, -262138, 536870926, 0, -262137, 0, 0, -262136, 0, 0, -262135, 12, 0, -262134, 13, 0, -262133, 536870924, 0, -262132, 536870912, 0, -262131, 536870912, 0, -131077, 536870926, 0, -131076, 536870926, 0, -131075, 536870926, 0, -131074, 536870926, 0, -131073, 536870926, 0, -196608, 536870926, 0, -196607, 536870926, 0, -196606, 536870926, 0, -196605, 536870926, 0, -196604, 536870926, 0, -196603, 536870926, 0, -196602, 536870926, 0, -196601, 0, 0, -196600, 0, 0, -196599, 12, 0, -196598, 13, 0, -196597, 536870924, 0, -196596, 536870912, 0, -196595, 536870912, 0, -65541, 536870926, 0, -65540, 536870926, 0, -65539, 536870926, 0, -65538, 536870926, 0, -65537, 536870926, 0, -131072, 536870926, 0, -131071, 536870926, 0, -131070, 536870926, 0, -131069, 536870926, 0, -131068, 536870926, 0, -131067, 536870926, 0, -131066, 536870926, 0, -131065, 0, 0, -131064, 0, 0, -131063, 12, 0, -131062, 13, 0, -131061, 536870924, 0, -131060, 536870912, 0, -131059, 536870912, 0, -5, 536870926, 0, -4, 536870926, 0, -3, 536870926, 0, -2, 536870926, 0, -1, 536870926, 0, -65536, 536870926, 0, -65535, 536870926, 0, -65534, 536870926, 0, -65533, 536870926, 0, -65532, 536870926, 0, -65531, 536870926, 0, -65530, 536870926, 0, -65529, 0, 0, -65528, 0, 0, -65527, 12, 0, -65526, 13, 0, -65525, 536870924, 0, -65524, 536870912, 0, -65523, 536870912, 0, 65531, 536870926, 0, 65532, 536870926, 0, 65533, 536870926, 0, 65534, 536870926, 0, 65535, 536870926, 0, 0, 536870926, 0, 1, 536870926, 0, 2, 536870926, 0, 3, 536870926, 0, 4, 536870926, 0, 5, 536870926, 0, 6, 536870926, 0, 7, 0, 0, 8, 0, 0, 9, 12, 0, 10, 13, 0, 11, 536870924, 0, 12, 536870912, 0, 13, 536870912, 0, 131067, 536870926, 0, 131068, 536870926, 0, 131069, 536870926, 0, 131070, 536870926, 0, 131071, 536870926, 0, 65536, 536870926, 0, 65537, 536870926, 0, 65538, 536870926, 0, 65539, 536870926, 0, 65540, 536870926, 0, 65541, 536870926, 0, 65542, 536870926, 0, 65543, 0, 0, 65544, 0, 0, 65545, 12, 0, 65546, 13, 0, 65547, 536870924, 0, 65548, 536870912, 0, 65549, 536870912, 0, 196603, 536870926, 0, 196604, 536870926, 0, 196605, 536870926, 0, 196606, 536870926, 0, 196607, 536870926, 0, 131072, 536870926, 0, 131073, 536870926, 0, 131074, 536870926, 0, 131075, 536870926, 0, 131076, 536870926, 0, 131077, 536870926, 0, 131078, 536870926, 0, 131079, 0, 0, 131080, 0, 0, 131081, 12, 0, 131082, 13, 0, 131083, 536870924, 0, 131084, 536870912, 0, 131085, 536870912, 0, 262139, 536870926, 0, 262140, 536870926, 0, 262141, 536870926, 0, 262142, 536870926, 0, 262143, 536870926, 0, 196608, 536870926, 0, 196609, 536870926, 0, 196610, 536870926, 0, 196611, 536870926, 0, 196612, 536870926, 0, 196613, 536870926, 0, 196614, 536870926, 0, 196615, 0, 0, 196616, 0, 0, 196617, 12, 0, 196618, 13, 0, 196619, 536870924, 0, 196620, 536870912, 0, 196621, 536870912, 0, 327666, 1, 0, 327667, 1, 0, 327668, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 536870913, 0, 327676, 536870913, 0, 327677, 536870913, 0, 327678, 536870913, 0, 327679, 536870913, 0, 262144, 536870913, 0, 262145, 536870913, 0, 262146, 536870913, 0, 262147, 536870913, 0, 262148, 536870913, 0, 262149, 536870913, 0, 262150, 536870913, 0, 262151, 3, 0, 262152, 0, 0, 262153, 12, 0, 262154, 13, 0, 262155, 536870924, 0, 262156, 536870912, 0, 262157, 536870912, 0, 393202, 536870912, 0, 393203, 536870912, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 12, 0, 327690, 13, 0, 327691, 536870924, 0, 327692, 536870912, 0, 327693, 536870912, 0, 458738, 536870912, 0, 458739, 536870912, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 12, 0, 393226, 13, 0, 393227, 536870924, 0, 393228, 536870912, 0, 393229, 536870912, 0, 524274, 536870912, 0, 524275, 536870912, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 12, 0, 458762, 13, 0, 458763, 536870924, 0, 458764, 536870912, 0, 458765, 536870912, 0, 589810, 536870912, 0, 589811, 536870912, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 12, 0, 524298, 13, 0, 524299, 536870924, 0, 524300, 536870912, 0, 524301, 536870912, 0 )

[node name="TopTiles2" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -524303, 8, 0, -524302, 9, 0, -524301, 11, 0, -524300, 11, 0, -524299, 11, 0, -524298, 11, 0, -524297, 11, 0, -524296, 11, 0, -589811, 8, 0, -458767, 8, 0, -458766, 536870920, 0, -524282, -1610612721, 0, -524281, -2147483633, 0, -524275, 8, 0, -458746, 17, 0, -458745, 16, 0, -458739, 8, 0, -327695, 8, 0, -327694, 1073741833, 0, -327693, 1610612747, 0, -327692, 1610612747, 0, -327691, 1610612747, 0, -327690, 1073741835, 0, -327689, 1073741835, 0, -327688, 1073741835, 0, -327687, 1073741835, 0, -327686, 1073741835, 0, -327685, 1073741835, 0, -327684, 1073741835, 0, -327683, 1073741835, 0, -327682, 1073741835, 0, -327681, 1073741835, 0, -393216, 1073741835, 0, -393215, 1073741835, 0, -393214, 1073741839, 0, -393212, 1610612751, 0, -393211, 1073741835, 0, -393210, 20, 0, -393209, -1073741809, 0, -393203, 8, 0, -262159, 10, 0, -262158, 536870923, 0, -262157, 536870923, 0, -262156, 536870923, 0, -262155, 536870923, 0, -262154, 536870923, 0, -262153, 536870923, 0, -262152, 536870923, 0, -262151, 536870923, 0, -262150, 536870921, 0, -262149, 9, 0, -262148, 11, 0, -262147, 11, 0, -262146, 11, 0, -262145, 11, 0, -327680, 11, 0, -327679, 11, 0, -327678, 15, 0, -327676, 536870927, 0, -327675, 11, 0, -327674, 536870921, 0, -327673, 536870920, 0, -327667, 8, 0, -196614, 8, 0, -196613, 536870920, 0, -262138, 8, 0, -262137, 536870920, 0, -262131, 8, 0, -131078, 8, 0, -131077, 536870920, 0, -196602, 8, 0, -196601, 536870920, 0, -196595, 8, 0, -65542, 8, 0, -65541, 536870920, 0, -131066, 8, 0, -131065, 536870920, 0, -131059, 8, 0, -6, 8, 0, -5, 536870920, 0, -65530, 8, 0, -65529, 536870920, 0, -65523, 8, 0, 65530, 8, 0, 65531, 536870920, 0, 6, 8, 0, 7, 536870920, 0, 13, 8, 0, 131066, 8, 0, 131067, 536870920, 0, 65542, 8, 0, 65543, 536870920, 0, 65549, 8, 0, 196602, 8, 0, 196603, 536870920, 0, 131078, 8, 0, 131079, 536870920, 0, 131085, 8, 0, 262129, 1073741834, 0, 262130, 1610612747, 0, 262131, 1610612747, 0, 262132, 1610612747, 0, 262133, 1610612747, 0, 262134, 1610612747, 0, 262135, 1610612747, 0, 262136, 1610612747, 0, 262137, 1610612747, 0, 262138, 1610612745, 0, 262139, 1073741833, 0, 262140, 1610612747, 0, 262141, 1610612747, 0, 262142, 1610612747, 0, 262143, 1610612747, 0, 196608, 1610612747, 0, 196609, 1610612747, 0, 196610, 1610612747, 0, 196611, 1610612747, 0, 196612, 1610612747, 0, 196613, 1610612747, 0, 196614, 1610612745, 0, 196615, 536870920, 0, 196621, 8, 0, 327665, 8, 0, 327666, 9, 0, 327667, 11, 0, 327668, 11, 0, 327669, 11, 0, 327670, 11, 0, 327671, 11, 0, 327672, 11, 0, 327673, 11, 0, 327674, 11, 0, 327675, 536870923, 0, 327676, 536870923, 0, 327677, 536870923, 0, 327678, 536870923, 0, 327679, 536870923, 0, 262144, 536870923, 0, 262145, 536870923, 0, 262146, 536870923, 0, 262147, 536870923, 0, 262148, 536870923, 0, 262149, 536870923, 0, 262150, 536870923, 0, 262151, 536870922, 0, 262157, 8, 0, 393201, -1610612721, 0, 393202, -2147483633, 0, 327693, 8, 0, 458737, 21, 0, 458738, 536870929, 0, 393229, 8, 0, 524273, -536870897, 0, 524274, -1073741809, 0, 458765, 8, 0, 589809, 8, 0, 589810, 536870920, 0, 524301, 8, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Black" type="ColorRect" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="Leaderboard" type="TextureRect" parent="UILayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 160 )
mouse_filter = 2
texture = SubResource( 6 )
stretch_mode = 4
script = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="UILayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -85.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 1

[node name="InitialDialogue" parent="UILayer/MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 75.0
messages = [ "Joe Schmuck, step into my office." ]
speaker = "Boss"
talk_sounds = [ SubResource( 4 ) ]
read_speed = 0.1
auto_start = false
allow_type_skip = false

[node name="BossDialogue" parent="UILayer/MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 75.0
messages = [ "Have you seen the leaderboard recently?", "You're in dead last. Our worst employee." ]
speaker = "Boss"
talk_sounds = [ SubResource( 2 ) ]
read_speed = 0.075
auto_start = false
allow_type_skip = false

[node name="SchmuckDialogue" parent="UILayer/MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 75.0
messages = [ "Does that mean I'm fired?" ]
speaker = "Joe Schmuck"
talk_sounds = [ SubResource( 3 ) ]
read_speed = 0.075
auto_start = false

[node name="Boss2" parent="UILayer/MarginContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 75.0
messages = [ "Much worse, you have to take the job with Middle Co.", "They create all middle management on earth. No one else wants to work with them, so you have to.", "They need help with a pest problem they caused messing around with portals.", "They also need help activating a new portal. I told them to stop using portals but they won't listen.", "Anyway, I'm sure it'll be simple enough. Now get back to work!" ]
speaker = "Boss"
talk_sounds = [ SubResource( 2 ) ]
read_speed = 0.07
auto_start = false

[node name="SkipContainer" type="MarginContainer" parent="UILayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -125.0
margin_bottom = 40.0
custom_constants/margin_top = -10
custom_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/SkipContainer"]
margin_left = 5.0
margin_top = -10.0
margin_right = 125.0
margin_bottom = 40.0
alignment = 2

[node name="Label" type="Label" parent="UILayer/SkipContainer/HBoxContainer"]
margin_left = 64.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 18 )
theme = ExtResource( 13 )
text = "skip"
align = 2

[node name="SkipIntro" type="CheckBox" parent="UILayer/SkipContainer/HBoxContainer"]
margin_left = 100.0
margin_top = 15.0
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 13 )
enabled_focus_mode = 0
flat = true

[node name="Animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/leaderboard = SubResource( 7 )
anims/show_office = SubResource( 5 )

[node name="Boss" type="Sprite" parent="."]
visible = false
position = Vector2( 14, 1 )
texture = ExtResource( 4 )

[node name="ChairDesk" type="Sprite" parent="."]
position = Vector2( 14, 16 )
texture = ExtResource( 11 )

[node name="Chair" type="Sprite" parent="."]
position = Vector2( 14, -20 )
texture = ExtResource( 12 )
offset = Vector2( -2, 0 )

[node name="JoeSchmuck" type="Sprite" parent="."]
position = Vector2( 56, -67 )
texture = ExtResource( 5 )
hframes = 10
frame = 2

[node name="WaterCooler" type="Sprite" parent="."]
position = Vector2( 214, 48 )
texture = ExtResource( 6 )

[connection signal="button_down" from="UILayer/SkipContainer/HBoxContainer/SkipIntro" to="." method="_on_SkipIntro_button_down"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
